@@ -12,18 +12,24 @@ else
 fi
 test "x$JAVAC" = x && AC_MSG_ERROR([no acceptable Java compiler found in \$PATH])
 AC_PROG_JAVAC_WORKS
-(echo "$JAVAC" | grep -e " -C$" >/dev/null 2>/dev/null) && AC_MSG_WARN([
-The build seems to be using gcj for bytecode generation.  Some
-versions of gcj are known to produce bad bytecode.  See here for a
-list of bugs that may be relevant:
+if (echo "$JAVAC" | grep -e "gcj" >/dev/null 2>/dev/null); then
+  case $(gcj -dumpversion) in
+    4.3*)
+      ;;
+    *)
+      AC_MSG_WARN([ The build seems to be using a version of gcj prior
+to 4.3 for bytecode generation.  Some versions of gcj are known to
+produce bad bytecode.  See here for a list of bugs that may be
+relevant:
 
 http://gcc.gnu.org/bugzilla/buglist.cgi?component=java&keywords=wrong-code&order=default
-
-At least bug 19921 is known to affect gjdoc (in Feb 2005).
 
 You may want to set the environment variable JAVAC to an alternate
 compiler, such as jikes, to make sure that you end up with valid
 bytecode.
 ]);
+      ;;
+  esac
+fi
 AC_PROVIDE([$0])dnl
 ])
